@@ -50,6 +50,13 @@ top:
 
 all: shared
 
+fips: cryptlib.o thr_id.o uid.o $(CPUID_OBJ)
+	[ -n "$(SDIRS)" ] && for i in $(SDIRS) ; do \
+		    ( obj=`$(PERL) $(TOP)/util/fipsobj.pl $$i` && \
+			cd $$i && echo "making fips in $(DIR)/$$i..." && \
+		    $(MAKE) -e TOP=../.. DIR=$$i INCLUDES='$(INCLUDES)' $$obj ) || exit 1; \
+		done;
+
 buildinf.h: ../Makefile
 	( echo "#ifndef MK1MF_BUILD"; \
 	echo '  /* auto-generated by crypto/Makefile for crypto/cversion.c */'; \
